--- a/src/pages/totems.html
+++ b/src/pages/totems.html
@@ -51,8 +51,8 @@
         </div>        
     </header>
     <main>
-        <div class="bg-beige px-5 laptop:px-20 pt-20 relative h-screen w-screen overflow-hidden">
-            <div>
+        <div class="bg-beige pt-20 relative h-screen w-screen overflow-hidden">
+            <div class="px-5 laptop:px-20">
                 <svg class="absolute -top-32 -left-32" width="282" height="282" fill="none">
                     <path opacity="0.8" fill-rule="evenodd" clip-rule="evenodd" d="M141 282C218.872 282 282 218.872 282 141C282 63.1278 218.872 0 141 0C63.1278 0 0 63.1278 0 141C0 218.872 63.1278 282 141 282ZM141 223.051C186.315 223.051 223.051 186.316 223.051 141C223.051 95.6846 186.315 58.9492 141 58.9492C95.6845 58.9492 58.9491 95.6846 58.9491 141C58.9491 186.316 95.6845 223.051 141 223.051Z" fill="#E7BC87"/>
                 </svg>
@@ -66,8 +66,8 @@
                     <path opacity="0.8" fill-rule="evenodd" clip-rule="evenodd" d="M141 282C218.872 282 282 218.872 282 141C282 63.1278 218.872 0 141 0C63.1278 0 0 63.1278 0 141C0 218.872 63.1278 282 141 282ZM141 223.051C186.315 223.051 223.051 186.316 223.051 141C223.051 95.6846 186.315 58.9492 141 58.9492C95.6845 58.9492 58.9491 95.6846 58.9491 141C58.9491 186.316 95.6845 223.051 141 223.051Z" fill="#E7BC87"/>
                 </svg>
             </div>
-            <div>
-                <div class="navigation mb-32 laptop:my-10">
+            <div class="px-5 laptop:px-20">
+                <div class="navigation my-10">
                     <div class="flex flex-wrap w-full justify-between place-items-end laptop:w-1/3 laptop:mx-auto">
                         <a href="./totems.html" class="relative cursor-pointer">
                             <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-marine hover:h-2" aria-hidden="true"></span>
@@ -85,6 +85,82 @@
                 </div>
             </div>
             
+
+            <div class="swiper h-[60vh] relative laptop:w-11/12">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide text-center h-full w-screen flex flex-col justify-between laptop:h-[60vh] laptop:w-1/3">
+                        <p>Nom de la lampe</p>
+                        <div class="flex flex-row w-full">
+                            <div class="h-full w-1/3 text-center">
+                                <img src="../images/samuel-piccolo.webp" alt="" class="laptop:h-[40vh] laptop:mx-auto">
+                                <p>490 €</p>
+                            </div>
+                            <div class="h-full w-1/3 text-center">
+                                <img src="../images/victor-medio.webp" alt="" class="laptop:h-[40vh] laptop:mx-auto">
+                                <p>750 €</p>
+                            </div>
+                            <div class="h-full w-1/3 text-center">
+                                <img src="../images/victor-grande.webp" alt="" class="laptop:h-[40vh] laptop:mx-auto">
+                                <p>890 €</p>
+                            </div>
+                        </div>
+                        <button class="button bg-marine text-white self-end mr-5 laptop:mr-20">Acheter
+                            <svg width="28" height="16" viewBox="0 0 28 16" fill="none" class="stroke-white">
+                                <path d="M1 8H26" stroke-width="2" stroke-linecap="round"/>
+                                <path d="M19.5 1.5L26 8L19.5 14.5" stroke-width="2" stroke-linecap="round"/>
+                            </svg> 
+                        </button>
+                    </div>
+                    <div class="swiper-slide text-center h-full w-screen flex flex-col justify-between laptop:h-[60vh] laptop:w-1/3">
+                        <p>Nom de la lampe</p>
+                        <div class="flex flex-row w-full">
+                            <div class="h-full w-1/3 text-center">
+                                <img src="../images/samuel-piccolo.webp" alt="" class="laptop:h-[40vh] laptop:mx-auto">
+                                <p>490 €</p>
+                            </div>
+                            <div class="h-full w-1/3 text-center">
+                                <img src="../images/victor-medio.webp" alt="" class="laptop:h-[40vh] laptop:mx-auto">
+                                <p>750 €</p>
+                            </div>
+                            <div class="h-full w-1/3 text-center">
+                                <img src="../images/victor-grande.webp" alt="" class="laptop:h-[40vh] laptop:mx-auto">
+                                <p>890 €</p>
+                            </div>
+                        </div>
+                        <button class="button bg-marine text-white self-end mr-5 laptop:mr-20">Acheter
+                            <svg width="28" height="16" viewBox="0 0 28 16" fill="none" class="stroke-white">
+                                <path d="M1 8H26" stroke-width="2" stroke-linecap="round"/>
+                                <path d="M19.5 1.5L26 8L19.5 14.5" stroke-width="2" stroke-linecap="round"/>
+                            </svg> 
+                        </button>
+                    </div>
+                    <div class="swiper-slide text-center h-full w-screen flex flex-col justify-between laptop:h-[60vh] laptop:w-1/3">
+                        <p>Nom de la lampe</p>
+                        <div class="flex flex-row w-full">
+                            <div class="h-full w-1/3 text-center">
+                                <img src="../images/samuel-piccolo.webp" alt="" class="laptop:h-[40vh] laptop:mx-auto">
+                                <p>490 €</p>
+                            </div>
+                            <div class="h-full w-1/3 text-center">
+                                <img src="../images/victor-medio.webp" alt="" class="laptop:h-[40vh] laptop:mx-auto">
+                                <p>750 €</p>
+                            </div>
+                            <div class="h-full w-1/3 text-center">
+                                <img src="../images/victor-grande.webp" alt="" class="laptop:h-[40vh] laptop:mx-auto">
+                                <p>890 €</p>
+                            </div>
+                        </div>
+                        <button class="button bg-marine text-white self-end mr-5 laptop:mr-20">Acheter
+                            <svg width="28" height="16" viewBox="0 0 28 16" fill="none" class="stroke-white">
+                                <path d="M1 8H26" stroke-width="2" stroke-linecap="round"/>
+                                <path d="M19.5 1.5L26 8L19.5 14.5" stroke-width="2" stroke-linecap="round"/>
+                            </svg> 
+                        </button>
+                    </div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
         </div>
     </main>
     <footer class="px-5 laptop:px-20 py-5 bg-skin laptop:flex laptop:flex-rows laptop:w-full laptop:justify-evenly">
@@ -114,12 +190,23 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
-        const swiper = new Swiper('.swiper', {
-            // Optional parameters
-            direction: 'horizontal',
-            slidesPerView: 1,
-            spaceBetween: 10,
+        var swiper = new Swiper(".swiper", {
+            effect: "coverflow",
+            grabCursor: true,
             centeredSlides: true,
+            loop: true,
+            slidesPerView: "auto",
+            coverflowEffect: {
+                rotate: 50,
+                stretch: 0,
+                depth: 100,
+                modifier: 1,
+                slideShadows: false,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
         });
     </script>
 </body>
